# oxr_converter

./: .dockerignore  .env_setme  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
api/: app.py  config.py  constants.py  run.py  wsgi.py
api/controllers/: error_routes.py  v1_routes.py
api/migrations/versions/: 2df8afef0e3c_.py
api/models/: convert_data.py  database.py
api/tests/: test_functional.py  test_utils.py  tests.py
api/utils/: data_utils.py  middleware.py  processors.py  request_utils.py
config/mysql/: db_entrypoint.sh
config/nginx/: nginx.conf
config/redis/: redis.conf
config/uwsgi/: uwsgi.ini
