[tool.poetry]
name = "zapo"
version = "0.1.0"
description = ""
authors = ["Erika Pogorelc <erika@serox.si>"]

[tool.poetry.dependencies]
python = "^3.7"
uwsgi = "^2.0.18"
flask = "^1.1"
flask-sqlalchemy = "^2.4"
marshmallow = "^3.2"
flask-marshmallow = "^0.10.1"
marshmallow-sqlalchemy = "^0.19."
flask-migrate = "^"
requests = "^2.22.0"
python-dotenv = "^0.10"
redis = "^3.3.8"
flask-redis = "^0.4.0"
mysqlclient = "^1.4.2"

[tool.poetry.dev-dependencies]
ipython = "^7.4"
ipdb = "^0.12.2"
pytest = "^5.2"
flake8 = "^3.7"
fakeredis = "^1.0"
requests-mock = "^1.7"

[tool.black]
line-length = 100
target-version = ['py37', 'py38']
skip-numeric-underscore-normalization = true
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

